kubernetes/manifests/argocd/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # external-dns.alpha.kubernetes.io/hostname: argocd.dev.aviatize.com
    # cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
      host: 172.18.0.7.nip.io
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
      host: argocd.jr.homelab
  tls:
    - hosts:
        - 172.18.0.7.nip.io
      secretName: argocd-server-tls
    - hosts:
        - argocd.jr.homelab
      secretName: argocd-nas-tls
